Add MaxPermSize to default perf test limits
- perf tests run on Java 7 in CI